style(qsignature): updates based on IDEA suggestions